# match-engine

./: .gitignore  Cargo.toml  README.md  perf.data
.github/workflows/: rust.yml
client/: Cargo.toml
common/: Cargo.toml
common/src/: domain.rs  drain.rs  lib.rs  message.rs  messaging.rs  multicast.rs  time.rs  transport.rs
common/src/config/: config.rs
common/src/domain/: domain.rs  execution.rs  messaging.rs  mod.rs  order.rs
common/src/memory/: memory.rs  mod.rs  ring_buffer.rs  ring_slot.rs
common/src/message/: cancel_order.rs  execution.rs  execution_report.rs  instrument.rs  mod.rs  new_order.rs
common/src/network/: mod.rs  multicast.rs  multicast_batched_socket.rs  mutlicast.rs  network_constants.rs
common/src/serialize/: serialize.rs
common/src/transport/: _ack_message.rs  _ack_sequenced_multicast_receiver.rs  _ack_sequenced_multicast_sender.rs  ack_sequenced_multicast_receiver.rs  ack_sequenced_multicast_sender.rs  mod.rs  nack_sequenced_light_multicast_receiver.rs  nack_sequenced_multicast_receiver.rs  nack_sequenced_multicast_sender.rs  sequenced_message.rs  sequenced_multicast_receiver.rs  sequenced_multicast_sender.rs  transport_constants.rs  zero_alloc.rs  zero_alloc_transport.rs
common/src/types/: cancel_order.rs  engine.rs  execution_report.rs  instrument.rs  mod.rs  new_order.rs  order.rs  side.rs
common/src/util/: limit_spin.rs  mod.rs  time.rs
config/: config.json  engine_btc_usd.json
db/: docker-compose.yml
db/init/: 01-create-engine-db.sql
engine/: Cargo.toml
engine/src/: main.rs
engine/src/algorithm/: algo_utils.rs  fifo_match_strategy.rs  match_strategy.rs  mod.rs  pro_rata_match_strategy.rs
engine/src/book/: book.rs  book_side.rs  limit_order_book.rs  mod.rs  opt_limit_order_book.rs  order_book.rs  price_level.rs
engine/src/book/fifo/: limit_order_book.rs  mod.rs  opt_limit_order_book.rs
engine/src/config/: config.rs
engine/src/domain/: execution.rs  limit_order.rs  mod.rs  order.rs
engine/src/engine/: clob.rs  engine_config.rs  limit_order_book.rs  match_engine.rs  match_server.rs  mod.rs  order_book.rs
engine/src/internal/: execution.rs  mod.rs  order.rs
engine/src/process/: match_thread.rs  mod.rs  msg_in_thread.rs  msg_out_thread.rs
engine/src/threaded_processors/: mod.rs  msg_out_processor.rs
engine/src/util/: time.rs
fix_client/: Cargo.toml
fix_client/src/: main.rs
gateway/: Cargo.toml
gateway/src/: client_state.rs  fix_engine.rs  fix_server.rs  main.rs  message.rs  message_conversion.rs  parser.rs
gateway/src/process/: client_connection_handler.rs  engine_msg_in_submitter.rs  engine_msg_out_receiver.rs  gateway_connection_handler.rs  mod.rs
market-data/: Cargo.toml
market-data/src/: main.rs  market_data_book.rs  market_event.rs  md_book.rs
market-data/src/process/: engine_out_msg_receiver.rs  mod.rs
market-gateway/: Cargo.toml
market-gateway/src/: app_state.rs  client_state.rs  main.rs  parser.rs
market-gateway/src/process/: client_connection_handler.rs  engine_msg_in_submitter.rs  engine_msg_in_thread.rs  engine_msg_out_receiver.rs  engine_msg_out_thread.rs  gateway_to_oe_api.rs  mod.rs  oe_api_to_gateway.rs
match-engine/: Cargo.toml
match-engine/src/: main.rs
me-ui/: package-lock.json  package.json  tailwind.config.ts
me-ui/src/: app.html
messaging/: Cargo.toml
messaging/src/: engine.rs
misc/: perf.sh  setup.sh
misc/scratch/: references.txt
oe-api/: Cargo.toml
oe-api/src/: api_to_engine_handler.rs  app_state.rs  engine_connection.rs  engine_event_stream.rs  engine_order_entry.rs  main.rs  ws_client_stream.rs  ws_event_stream.rs
oe-api/src/api_spec/: request.rs  response.rs
oe-client/: Cargo.toml
oe-client/src/: main.rs
oe_client/: Cargo.toml
oe_client/src/: main.rs
order-entry-api/: Cargo.toml
order-entry-api/res/: index.html
order-entry-api/src/: main.rs
order-entry-api/src/domain/: domain.rs
order-simulator/: pom.xml
recorder/: Cargo.toml
recorder/src/: engine_out_msg_thread.rs  main.rs  (+2 more)
res/: orderbook_state.txt
scratch/: orderbook_state.txt  references.txt
scripts/: create_trade_history_db.sh  md_request.lua  perf_1.sh  setup.sh
src/: client.rs  main.rs  server.rs  util.rs
trade-viewer/: Cargo.toml
trade-viewer/src/: main.rs
(+43 files in other folders)
