[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13.4"
bitcode = "0.6.3"
serde = { version = "1.0.195", features = ["derive"] }
socket2 = { version = "0.5.8", features = ["all"] }
lazy_static = "1.5.0"
minstant = "0.1.7"
nix = { version = "0.30.1", features = ["socket", "uio", "net", "time"] }