[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = "0.6.3"
socket2 = { version = "0.5.8", features = ["all"] }
lazy_static = "1.5.0"
minstant = "0.1.7"
nix = { version = "0.30.1", features = ["socket", "uio", "net", "poll", "time"] }
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
