[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
config = "0.13.4"
common = { version = "0.1.0", path = "../messaging" }
serde_json = "1.0.111"
rand = "0.8.5"
uninit = "0.6.2"
quanta = "0.12.2"
lazy_static = "1.4.0"
minstant = "0.1.6"
bincode = "1.3.3"
bitcode = "0.6.3"
socket2 = "0.5.7"
