[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.111"
skytable = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
rand = "0.8.5"
common = { version = "0.1.0", path = "../common" }
lazy_static = "1.5.0"
fefix = { version = "0.7.0", features = ["fix44", "fix42"] }
socket2 = { version = "0.5.8", features = ["all"] }
bitcode = "0.6.5"
shlex = "1.3.0"
minstant = "0.1.7"
core_affinity = "0.8.3"
dashmap = "6.1.0"