[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.8.5"
common = { version = "0.1.0", path = "../common" }
lazy_static = "1.5.0"
fefix = { version = "0.7.0", features = ["fix44", "fix42"] }
bitcode = "0.6.5"
core_affinity = "0.8.3"
dashmap = "6.1.0"
nix = "0.30.1"