[package]
name = "market-data"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.218", features = ["derive"] }
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
lazy_static = "1.5.0"
