[package]
name = "market-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.8.5"
common = { version = "0.1.0", path = "../common" }
lazy_static = "1.5.0"
fefix = { version = "0.7.0", features = ["fix44", "fix42"] }
core_affinity = "0.8.3"
dashmap = "6.1.0"