[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.111"
skytable = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
rand = "0.8.5"
common = { version = "0.1.0", path = "../common" }
lazy_static = "1.4.0"