[package]
name = "trade-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["form"] }
axum-error = "0.2.0"
serde = "1.0.196"
tokio = { version = "1.35.1", features = ["full"] }
lazy_static = "1.4.0"
